--- a/_all-courses/ma216.md
+++ b/_all-courses/ma216.md
@@ -1,4 +1,25 @@
 ---
 code: MA 216
 title: Introduction to Graph Theory
+books:
+    - author: Adrian Bondy and U.S.R. Murty
+      title: Graph Theory
+      publ: "Graduate Texts in Mathematics, 244. Springer, New York, 2008, ISBN: 978-1846289699"
+
+    - author: Reinhard Diestel
+      title: Graph theory (Third edition)
+      publ: "Graduate Texts in Mathematics, 173. Springer-Verlag, Berlin, 2005. ISBN: 978-3540261827"
+
+    - author: Douglas B. West
+      title: Introduction to graph theory
+      publ: "Prentice Hall, Inc., Upper Saddle River, NJ, 1996. ISBN: 0-13-227828-6"
 ---
+Graphs, subgraphs, Eulerian tours, trees, matrix tree theory
+and Cayley's formula, connectedness and Menger's theorem, planarity
+and Kuratowski's theorem, chromatic number and chromatic polynomial,
+Tutte polynomial, the five-colour theorem, matchings, Hall's theorem,
+Tutte's theorem, perfect matchings and Kasteleyn's theorem, the
+probabilistic method, basics of algebraic graph theory
+
+No prerequisites are expected, but we will assume a
+familiarity with linear algebra.
