--- a/_all-courses/ma306.md
+++ b/_all-courses/ma306.md
@@ -1,4 +1,34 @@
 ---
 title: Topics in Morse Theory
 code: MA 306
+books: 
+    - author: Michèle Audin, Mihai Damian
+      title: Morse Theory and Floer Homology 
+      publ: 2014, Springer-Verlag London
+
+    - author: J. Milnor
+      title: Morse Theory
+      publ: Ann. of Math. Stud. 51, Princeton Univ. Press, Princeton, 1963.
+
+    - author: L. Nicolescu
+      title: An invitation to Morse theory
+      publ: http://www3.nd.edu/~lnicolae/Morse2nd.pdf
+
+    - author: M. Schwarz
+      title: Morse homology
+      publ: Birkhäuser, Basel, 1993
+
+    - author: R. Cohen, Kevin Iga, Paul Norbury
+      title: Topics in morse theory
+      publ: lecture notes, 2006
+prereq-courses: MA 232, MA 338
+prereqs: 
+    - Manifolds and submanifolds
+    - critical points, Sard’s theorem
+    - vector fields as differential equations
+    - Riemannian metrics, exponential map."
+
+
 ---
+
+Transversality, Morse functions, stable and unstable manifolds, Morse-Smale moduli spaces, the space of gradient flows, compactification of the moduli spaces of flows, Morse homology, applications.
