--- a/_all-courses/ma311.md
+++ b/_all-courses/ma311.md
@@ -32,7 +32,7 @@ ug-prereq-courses:
 
 * Serre's criterion for affineness
 
-* \v{C}ech cohomology
+* &#268;ech cohomology
 
 * Cohomology of projective space, twisting by Serre sheaves
 
