--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,231 @@
+@article {MR3988614,
+    AUTHOR = {Benedetti, Carolina and Gonz\'{a}lez D'Le\'{o}n, Rafael S. and Hanusa,
+              Christopher R. H. and Harris, Pamela E. and Khare, Apoorva and
+              Morales, Alejandro H. and Yip, Martha},
+     TITLE = {A combinatorial model for computing volumes of flow polytopes},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {372},
+      YEAR = {2019},
+    NUMBER = {5},
+     PAGES = {3369--3404},
+      ISSN = {0002-9947},
+   MRCLASS = {05A15 (05A19 05C20 05C21 52A38 52B05 52B11)},
+  MRNUMBER = {3988614},
+       DOI = {10.1090/tran/7743},
+       URL = {https://doi.org/10.1090/tran/7743},
+}
+		
+@article {MR3987495,
+    AUTHOR = {Misra, Gadadhar and Reza, Md. Ramiz},
+     TITLE = {Curvature inequalities and extremal operators},
+   JOURNAL = {Illinois J. Math.},
+  FJOURNAL = {Illinois Journal of Mathematics},
+    VOLUME = {63},
+      YEAR = {2019},
+    NUMBER = {2},
+     PAGES = {193--217},
+      ISSN = {0019-2082},
+   MRCLASS = {32A99 (30C40 47A13 47A25)},
+  MRNUMBER = {3987495},
+       DOI = {10.1215/00192082-7768711},
+       URL = {https://doi.org/10.1215/00192082-7768711},
+}
+		
+@article {MR3981118,
+    AUTHOR = {Balakumar, G. P. and Borah, Diganta and Mahajan, Prachi and
+              Verma, Kaushal},
+     TITLE = {Remarks on the higher dimensional {S}uita conjecture},
+   JOURNAL = {Proc. Amer. Math. Soc.},
+  FJOURNAL = {Proceedings of the American Mathematical Society},
+    VOLUME = {147},
+      YEAR = {2019},
+    NUMBER = {8},
+     PAGES = {3401--3411},
+      ISSN = {0002-9939},
+   MRCLASS = {32F45 (32A07 32A25)},
+  MRNUMBER = {3981118},
+       DOI = {10.1090/proc/14421},
+       URL = {https://doi.org/10.1090/proc/14421},
+}
+		
+@article {MR3980452,
+    AUTHOR = {Sain, Debmalya},
+     TITLE = {Smooth points in operator spaces and some
+              {B}ishop-{P}helps-{B}ollob\'{a}s type theorems in {B}anach spaces},
+   JOURNAL = {Oper. Matrices},
+  FJOURNAL = {Operators and Matrices},
+    VOLUME = {13},
+      YEAR = {2019},
+    NUMBER = {2},
+     PAGES = {433--445},
+      ISSN = {1846-3886},
+   MRCLASS = {46B20 (46B04 47L05)},
+  MRNUMBER = {3980452},
+       DOI = {10.7153/oam-2019-13-32},
+       URL = {https://doi.org/10.7153/oam-2019-13-32},
+}
+		
+@article {MR3980451,
+    AUTHOR = {Sain, Debmalya and Paul, Kallol and Mandal, Kalidas},
+     TITLE = {On two extremum problems related to the norm of a bounded
+              linear operator},
+   JOURNAL = {Oper. Matrices},
+  FJOURNAL = {Operators and Matrices},
+    VOLUME = {13},
+      YEAR = {2019},
+    NUMBER = {2},
+     PAGES = {421--432},
+      ISSN = {1846-3886},
+   MRCLASS = {47L05 (46B20 46C15)},
+  MRNUMBER = {3980451},
+       DOI = {10.7153/oam-2019-13-31},
+       URL = {https://doi.org/10.7153/oam-2019-13-31},
+}
+		
+@article {MR3979938,
+    AUTHOR = {Misra, Gadadhar and Pal, Avijit and Varughese, Cherian},
+     TITLE = {Contractivity and complete contractivity for finite
+              dimensional {B}anach spaces},
+   JOURNAL = {J. Operator Theory},
+  FJOURNAL = {Journal of Operator Theory},
+    VOLUME = {82},
+      YEAR = {2019},
+    NUMBER = {1},
+     PAGES = {23--47},
+      ISSN = {0379-4024},
+   MRCLASS = {47L07 (47L25)},
+  MRNUMBER = {3979938},
+}
+		
+@article {MR3979699,
+    AUTHOR = {Bharali, Gautam and Chandel, Vikramjeet Singh},
+     TITLE = {Pick interpolation on the polydisc: small families of
+              sufficient kernels},
+   JOURNAL = {Complex Anal. Oper. Theory},
+  FJOURNAL = {Complex Analysis and Operator Theory},
+    VOLUME = {13},
+      YEAR = {2019},
+    NUMBER = {5},
+     PAGES = {2069--2093},
+      ISSN = {1661-8254},
+   MRCLASS = {32A25 (32A38 46E20 46J15)},
+  MRNUMBER = {3979699},
+       DOI = {10.1007/s11785-017-0701-5},
+       URL = {https://doi.org/10.1007/s11785-017-0701-5},
+}
+		
+@article {MR3977514,
+    AUTHOR = {Roth, Julien and Upadhyay, Abhitosh},
+     TITLE = {On compact anisotropic {W}eingarten hypersurfaces in
+              {E}uclidean space},
+   JOURNAL = {Arch. Math. (Basel)},
+  FJOURNAL = {Archiv der Mathematik},
+    VOLUME = {113},
+      YEAR = {2019},
+    NUMBER = {2},
+     PAGES = {213--224},
+      ISSN = {0003-889X},
+   MRCLASS = {53A10 (49Q10 53A07)},
+  MRNUMBER = {3977514},
+       DOI = {10.1007/s00013-019-01315-8},
+       URL = {https://doi.org/10.1007/s00013-019-01315-8},
+}
+		
+@article {MR3974676,
+    AUTHOR = {Das, Soumya and Pal, Ritwik},
+     TITLE = {The first negative eigenvalue of {Y}oshida lifts},
+   JOURNAL = {Res. Number Theory},
+  FJOURNAL = {Research in Number Theory},
+    VOLUME = {5},
+      YEAR = {2019},
+    NUMBER = {3},
+     PAGES = {Art. 20, 9},
+      ISSN = {2363-9555},
+   MRCLASS = {11F46 (11F66)},
+  MRNUMBER = {3974676},
+       DOI = {10.1007/s40993-019-0158-x},
+       URL = {https://doi.org/10.1007/s40993-019-0158-x},
+}
+		
+@article {MR3974191,
+    AUTHOR = {Ayyer, Arvind and Linusson, Svante},
+     TITLE = {Reverse juggling processes},
+   JOURNAL = {Random Structures Algorithms},
+  FJOURNAL = {Random Structures \& Algorithms},
+    VOLUME = {55},
+      YEAR = {2019},
+    NUMBER = {1},
+     PAGES = {56--72},
+      ISSN = {1042-9832},
+   MRCLASS = {60J10 (00A08 05A05)},
+  MRNUMBER = {3974191},
+}
+		
+@incollection {MR3973284,
+    AUTHOR = {Jha, Abhash Kumar and Sahu, Brundaban},
+     TITLE = {Differential operators on {J}acobi forms and special values of
+              certain {D}irichlet series},
+ BOOKTITLE = {Automorphic forms and related topics},
+    SERIES = {Contemp. Math.},
+    VOLUME = {732},
+     PAGES = {91--99},
+ PUBLISHER = {Amer. Math. Soc., Providence, RI},
+      YEAR = {2019},
+   MRCLASS = {11F50 (11F25 11F66)},
+  MRNUMBER = {3973284},
+       DOI = {10.1090/conm/732/14793},
+       URL = {https://doi.org/10.1090/conm/732/14793},
+}
+		
+@article {MR3968867,
+    AUTHOR = {Gupta, Subhojoy and Wolf, Michael},
+     TITLE = {Meromorphic quadratic differentials and measured foliations on
+              a {R}iemann surface},
+   JOURNAL = {Math. Ann.},
+  FJOURNAL = {Mathematische Annalen},
+    VOLUME = {373},
+      YEAR = {2019},
+    NUMBER = {1-2},
+     PAGES = {73--118},
+      ISSN = {0025-5831},
+   MRCLASS = {32G15 (30F30 37F75 53C12)},
+  MRNUMBER = {3968867},
+       DOI = {10.1007/s00208-018-1674-z},
+       URL = {https://doi.org/10.1007/s00208-018-1674-z},
+}
+		
+@article {MR3962574,
+    AUTHOR = {Jha, Abhash Kumar and Juyal, Abhishek and Pandey, Manish
+              Kumar},
+     TITLE = {On simultaneous non-vanishing of twisted {$L$}-functions
+              associated to newforms on {$\Gamma_0(N)$}},
+   JOURNAL = {J. Ramanujan Math. Soc.},
+  FJOURNAL = {Journal of the Ramanujan Mathematical Society},
+    VOLUME = {34},
+      YEAR = {2019},
+    NUMBER = {2},
+     PAGES = {245--252},
+      ISSN = {0970-1249},
+   MRCLASS = {11F67 (11F66)},
+  MRNUMBER = {3962574},
+}
+		
+@article {MR3962190,
+    AUTHOR = {Boggarapu, Pradeep and Roncal, Luz and Thangavelu, Sundaram},
+     TITLE = {On extension problem, trace {H}ardy and {H}ardy's inequalities
+              for some fractional {L}aplacians},
+   JOURNAL = {Commun. Pure Appl. Anal.},
+  FJOURNAL = {Communications on Pure and Applied Analysis},
+    VOLUME = {18},
+      YEAR = {2019},
+    NUMBER = {5},
+     PAGES = {2575--2605},
+      ISSN = {1534-0392},
+   MRCLASS = {35A23 (26A33 35R11)},
+  MRNUMBER = {3962190},
+}
+		
 @article {MR3958142,
     AUTHOR = {Belton, Alexander and Guillot, Dominique and Khare, Apoorva
               and Putinar, Mihai},
@@ -260,6 +488,22 @@
        URL = {https://doi.org/10.1007/s13324-018-0221-0},
 }
 
+@article {MR3930712,
+    AUTHOR = {Khan, Mohammad Yasir Feroz and Biswas, Rahul and Sau, Ramesh
+              Chandra},
+     TITLE = {Instability of {L}agrange interpolation on {$H^1(\Omega)\cap
+              C(\overline\Omega)$}},
+   JOURNAL = {Math. Student},
+  FJOURNAL = {The Mathematics Student},
+    VOLUME = {88},
+      YEAR = {2019},
+    NUMBER = {1-2},
+     PAGES = {153--158},
+      ISSN = {0025-5742},
+   MRCLASS = {47A67},
+  MRNUMBER = {3930712},
+}
+		
 @article {MR3924212,
     AUTHOR = {Dond, Asha K. and Gudi, Thirupathi and Sau, Ramesh CH.},
      TITLE = {An error analysis of discontinuous finite element methods for
