--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,70 @@
+@article {MR4008829,
+    AUTHOR = {Garani, Shayan Srinivasa and Seshadri, Harish},
+     TITLE = {An algorithmic approach to {S}outh {I}ndian classical music},
+   JOURNAL = {J. Math. Music},
+  FJOURNAL = {Journal of Mathematics \& Music. Mathematical and
+              Computational Approaches to Music Theory, Analysis,
+              Composition and Performance},
+    VOLUME = {13},
+      YEAR = {2019},
+    NUMBER = {2},
+     PAGES = {107--134},
+      ISSN = {1745-9737},
+   MRCLASS = {00A65 (18B25 20B35)},
+  MRNUMBER = {4008829},
+       DOI = {10.1080/17459737.2019.1604845},
+       URL = {https://doi.org/10.1080/17459737.2019.1604845},
+}
+		
+@article {MR4002492,
+    AUTHOR = {Aas, Erik and Ayyer, Arvind and Linusson, Svante and Potka,
+              Samu},
+     TITLE = {The exact phase diagram for a semipermeable {TASEP} with
+              nonlocal boundary jumps},
+   JOURNAL = {J. Phys. A},
+  FJOURNAL = {Journal of Physics. A. Mathematical and Theoretical},
+    VOLUME = {52},
+      YEAR = {2019},
+    NUMBER = {35},
+     PAGES = {355001, 19},
+      ISSN = {1751-8113},
+   MRCLASS = {82C22 (60K35)},
+  MRNUMBER = {4002492},
+}
+		
+@article {MR3995088,
+    AUTHOR = {Seshadri, Harish},
+     TITLE = {Differential geometry in {I}ndia},
+   JOURNAL = {Indian J. Pure Appl. Math.},
+  FJOURNAL = {Indian Journal of Pure and Applied Mathematics},
+    VOLUME = {50},
+      YEAR = {2019},
+    NUMBER = {3},
+     PAGES = {795--799},
+      ISSN = {0019-5588},
+   MRCLASS = {53-02},
+  MRNUMBER = {3995088},
+       DOI = {10.1007/s13226-019-0355-2},
+       URL = {https://doi.org/10.1007/s13226-019-0355-2},
+}
+		
+@article {MR3995078,
+    AUTHOR = {Bhattacharyya, Tirthankar and Rao, T. S. S. R. K.},
+     TITLE = {Survey of last ten years of work done in {I}ndia in some
+              selected areas of functional analysis and operator theory},
+   JOURNAL = {Indian J. Pure Appl. Math.},
+  FJOURNAL = {Indian Journal of Pure and Applied Mathematics},
+    VOLUME = {50},
+      YEAR = {2019},
+    NUMBER = {3},
+     PAGES = {599--617},
+      ISSN = {0019-5588},
+   MRCLASS = {46-02 (47-02)},
+  MRNUMBER = {3995078},
+       DOI = {10.1007/s13226-019-0345-4},
+       URL = {https://doi.org/10.1007/s13226-019-0345-4},
+}
+		
 @article {MR3988614,
     AUTHOR = {Benedetti, Carolina and Gonz\'{a}lez D'Le\'{o}n, Rafael S. and Hanusa,
               Christopher R. H. and Harris, Pamela E. and Khare, Apoorva and
