full course update

--- a/_all-courses/ma313.md
+++ b/_all-courses/ma313.md
@@ -4,40 +4,19 @@
 title: Algebraic Number Theory
 code: MA 313
 books:
-  - author: Artin, E. 
-    title: Galois Theory
-    publ: University of Notre Dame Press, 1944
-  - author: Borevich, Z. and Shafarevich, I.
-    title: Number Theory
-    publ: Academic Press, New York, 1966
-  - author: Cassels, J.W. and Frohlich, A. 
-    title: Algebraic Number Theory
-    publ: Academic Press, New York, 1948
-  - author: Hasse, H.  
-    title: Zahlentheorie
-    publ: Akademie Verlag, Berlin, 1949
-  - author: Hecke, E.  
-    title: Vorlesungen uber die Theorie der algebraischen Zahlen
-    publ: Chelsea, New York, 1948
-  - author: Samuel, P.   
-    title: Algebraic Theory of Numbers
-    publ: Hermann, 1970
+  - title: Algebraic Number theory
+    author: Jurgen Neukirch
+    publ: Springer, 1999
+  - title: Number fields
+    author: Daniel A. Marcus
+    publ: Springer Universitext, 2018
+  - title: Local fields
+    author: J.P Serre
+    publ: Springer GTM 67, 1979
+
 prereqs: 
-  - Linear algebra (MA 219 or equivalent)
-  - 'Basic algebra : Groups, rings, modules (MA 212 or equivalent), and algebraic field extensions'
-prereq-courses: 
+prereq-courses: MA 213
 ug-prereq-courses: 
 ---
 
-
-Algebraic preliminaries: Algebraic field extensions: Normal, separable and
-Galois extensions. Euclidean rings, principal ideal domains and factorial
-rings. Quadratic number fields. Cyclotomic number fields.
-Algebraic integers:
-Integral extensions: Algebraic number fields and algebraic integers. Norms and
-traces. Resultants and discriminants. Integral bases.
-Class numbers:Lattices and Minkowski theory. Finiteness of class number.
-Dirichlet's unit theorem.
-Ramification Theory: Discriminants.
-Applications to cryptography.
-
+Number fields and rings of integers, Dedekind domains; prime factorization, ideal class group,  finiteness of class number, Dirichlet's unit theorem, cyclotomic fields, theory of valuations, local fields.
