--- a/_all-courses/ma332.md
+++ b/_all-courses/ma332.md
@@ -22,7 +22,8 @@ ug-prereq-courses:
 
 
 Homology : Singular homology, excision, Mayer-Vietoris theorem, acyclic models,
-CW-complexes, simplicial and cellular homology, homology with coefficients./p>
+CW-complexes, simplicial and cellular homology, homology with coefficients.
+
 Cohomology : Comology groups, relative cohomology,cup products, Kunneth
 formula, cap product, orientation on manifolds, Poincare duality.
 
