--- a/_all-courses/ma209.md
+++ b/_all-courses/ma209.md
@@ -14,9 +14,9 @@ books:
     - author: M.C. Fitting
       title: Proof methods for modal and intuitionistic logics 
       publ: Reidel, 1983
-    - authot: M.C. Fitting and R. Mendelsohn
+    - author: M.C. Fitting and R. Mendelsohn
       title: First-order modal logic
-      publ: Kluwer, 1998.
+      publ: Kluwer, 1998
 ---
 
 This course is an introduction to standard material in logic, 
