--- a/_all-courses/ma397.md
+++ b/_all-courses/ma397.md
@@ -1,4 +1,15 @@
 ---
-title: Stochastic Processes and Random Geometric Graphs
-code: MA 397
+title:  "Topics in Rigorous Statistical Mechanics"
+code: "MA 397"
+books:
+    - title: Statistical Mechanics of Lattice Systems
+      author: Frideli and Velenik 
+      publ: Cambridge University Press, 2017
+    - title: Interacting Particle Systems
+      author: Liggett
+      publ: Springer, 1985
 ---
+
+We shall cover a selection of topics in probability theory coming from statistical physics models on the Euclidean lattice. A few possible examples of the models include: Ising model, O(N) model, Gaussian free field, contact process, voter model and exclusion processes.
+
+__Pre-requisites:__ This course will be aimed at  Int-Ph.D. and PhD students working in probability theory and related areas. A course in graduate probability theory is useful, but not absolutely necessary. A student with a strong undergraduate background in probability (i.e., without measure theory) might also find this course accessible.
