--- a/_seminars/2019/2019-12-05-hassain-m.md
+++ b/_seminars/2019/2019-12-05-hassain-m.md
@@ -42,11 +42,11 @@ not be isomorphic, but the group algebras '$\mathbb{C}[GL_2(O/P^r)]$' and
 $\mathbb{C}[GL_2(F_q[t]/(t^{r}))]$ are known to be isomorphic. In parallel,
 for $p >2$ and $r\geq 1,$ the group algebras $\mathbb{C}[SL_2(O/P^r)]$ and
 $\mathbb{C}[SL_2(F_q[t]/(t^{r}))]$ are also isomorphic. We show that for $p=2$
-and Char$(O)=0$, the group algebras $\mathbb{C}[SL_2(O/P^{2m})]$ and
-$\mathbb{C}[SL_2(F_q[t]/(t^{2m}))]$ are NOT isomorphic for $m > e$. As a
+and Char$(O)=0$, the group algebras $\mathbb{C}[SL_2(O/P^{r})]$ and
+$\mathbb{C}[SL_2(F_q[t]/(t^{r}))]$ are NOT isomorphic for $r \geq 2e+2$. As a
 corollary we obtain that the group algebras
-$\mathbb{C}[SL_2(\mathbb{Z}/2^{2m}\mathbb{Z})]$ and $\mathbb{C}[SL_2(F_2[t]/(t^{2m}))]$
-are NOT isomorphic for $m>1$. 
+$\mathbb{C}[SL_2(\mathbb{Z}/2^{r}\mathbb{Z})]$ and $\mathbb{C}[SL_2(F_2[t]/(t^{r}))]$
+are NOT isomorphic for $r\geq4$. 
 
 **Branching Laws:** We give a description of the branching laws obtained by
 restricting irreducible representations of $GL_2(O/P^r)$ to $SL_2(O/P^r)$ for
