--- a/_all-courses/ma224.md
+++ b/_all-courses/ma224.md
@@ -18,9 +18,4 @@ ug-prereq-courses:
 
 
 
-Complex numbers,  complex-analytic functions, Cauchy's integral formula,  power
-series, Liouville's theorem. The maximum-modulus theorem. Isolated
-singularities, residue theorem, the Argument Principle, real integrals via
-contour integration. Mobius transformations, conformal mappings. The Schwarz
-lemma, automorphisms of the dis. Normal families and Montel's theorem. The
-Riemann mapping theorem.
+Complex numbers, holomorphic and analytic functions, Cauchy-Riemann equations, Cauchy’s integral formula,  Liouville’s theorem and proof of fundamental theorem of algebra, the maximum-modulus principle. Isolated singularities, residue theorem, Argument Principle. Mobius transformations, conformal mappings, Schwarz lemma, automorphisms of the disc and complex plane. Normal families and Montel’s theorem. The Riemann mapping theorem. If time permits - analytic continuation and/or Picard's theorem. 
