--- a/_all-courses/ma323.md
+++ b/_all-courses/ma323.md
@@ -21,6 +21,6 @@ ug-prereq-courses:
 
 Review of basic notions from Banach and Hilbert space theory.
 
-**Bounded linear operators:** Spectral theory of compact, Self adjoint and normal operators, Sturm-Liouville problems, Green's function, Fredholm integral operators.
+**Bounded linear operators:** Spectral theory of compact, self adjoint and normal operators, Sturm-Liouville problems, Green's function, Fredholm integral operators.
 
-**Unbound linear operators on Hilbert spaces:** Symmetric and self adjoint operators, Spectral theory. Banach algebras Gelfand representation theorem. $C^\*$-algebras, Gelfand-Naimark-Segal construction.
+**Unbound linear operators on Hilbert spaces:** Symmetric and self adjoint operators, Spectral theory. Banach algebras, Gelfand representation theorem, $C^\*$-algebras, Gelfand-Naimark-Segal construction.
