--- a/_all-courses/ma222.md
+++ b/_all-courses/ma222.md
@@ -25,7 +25,7 @@ Construction of Lebesgue measure, Measurable functions, Lebesgue integration,
 Abstract measure and abstract integration, Monotone convergence theorem,
 Dominated convergence theorem, Fatou's lemma, Comparison of Riemann integration
 and Lebesgue integration, Product sigma algebras, Product measures, Sections of
-measurable functions, Fubini's theorem, Signed measures and Randon-Nikodym
+measurable functions, Fubini's theorem, Signed measures and Radon-Nikodym
 theorem, Lp-spaces, Characterization of continuous linear functionals on Lp -
 spaces, Change of variables, Complex measures, Riesz representation theorem.
  
