--- a/_seminars/2019/2019-12-18-ken-ono.md
+++ b/_seminars/2019/2019-12-18-ken-ono.md
@@ -18,6 +18,6 @@ lectures:
         Max Planck Institute, which sheds new light on this famous problem.
       slides: "2019-12-18-KenOno-1.pdf"
     - title:
-      abstract: >
+      abstract: 
       slides: "2019-12-18-KenOno-2.pdf"
 ---
