shifted page for course

--- a/_all-courses/ma351.md
+++ b/_all-courses/ma351.md
@@ -1,37 +1,27 @@
 ---
 
 
-title: Topics in Modular Forms
-code: MA 351
-prereqs:
-  - Basics of number theory
-  - Complex analysis
-  - Preferably some familiarity with MA 215 (Introduction to Modular Forms) but not necessary.
+code: MA 374
+title: Semigroup Theory and Evolution Equations
 books:
-  - author:  J.P. Serre.
-    title: A Course in Arithmetic
-    publ: Springer GTM, 2007
-  - author:  N.Koblitz.
-    title: Introduction to Elliptic Curves and Modular Forms
-    publ: Springer GTM, 1997
-  - author:  H. Iwaniec
-    title: Topics in Classical Automorphic Forms
-    publ: GTM 17, AMS,1997
-  - author: F. Diamond and J.Schurman
-    title: A First Course in Modular forms
-    publ: Springer GTM 228
+  - author: A. Pazy
+    title: Semigroup of Linear Operators and Applications to Partial Differential Equations
+    publ: Springer Verlag (1983)
+  - author: S. Kesavan
+    title: Topics in Functional Analysis and Application
+    publ: Wiley Eastern (1989)
+  - author: A. Friedman
+    title: Partial Differential Equations
+    publ: Holt, Reinhart and Winston (1969)
+  - author: H. Brezis
+    title: Analyse Fonctionnelle
+    publ: Theorie et Applications, Mason, Paris (1983)
 prereq-courses: 
 ug-prereq-courses: 
 ---
 
 
 
-Holomorphic Modular forms: motivation and introduction, Eisentein series, cusp
-forms, Fourier expansion of Poincare series and Petersson trace formula, Hecke
-operators and overview of newform theory, Kloosterman sums and bounds for
-Fourier coefficients, Automorphic L-functions, Dirichlet-twists and Weil's
-converse theorm, Theta functions and representation by quadratic forms,
-Convolution: the Rankin-Selberg method.
-(Further topics if time permits: Non-holomorphic modular forms (overview),
-Siegel modular forms (introduction), Elliptic curves and cusp forms, spectral
-theory, analytic questions related to modular forms.)
+__Semigroup Theory:__ Introduction, Continuous and Contraction Semigroups, Generators, Hille-Yoshida and Lumer-Philips Theorems
+
+__Evolution Equations:__ Semigroup Approach to Heat, Wave and Schrodinger Equations
