--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1,3 +1,137 @@
+@article {MR4029674,
+    AUTHOR = {Gupta, Subhojoy},
+     TITLE = {Limits of harmonic maps and crowned hyperbolic surfaces},
+   JOURNAL = {Trans. Amer. Math. Soc.},
+  FJOURNAL = {Transactions of the American Mathematical Society},
+    VOLUME = {372},
+      YEAR = {2019},
+    NUMBER = {11},
+     PAGES = {7573--7596},
+      ISSN = {0002-9947},
+   MRCLASS = {30F60 (57M50 58E20)},
+  MRNUMBER = {4029674},
+       DOI = {10.1090/tran/7777},
+       URL = {https://doi.org/10.1090/tran/7777},
+}
+		
+@article {MR4029105,
+    AUTHOR = {Gudi, Thirupathi and Majumder, Papri},
+     TITLE = {Conforming and discontinuous {G}alerkin {FEM} in space for
+              solving parabolic obstacle problem},
+   JOURNAL = {Comput. Math. Appl.},
+  FJOURNAL = {Computers \& Mathematics with Applications. An International
+              Journal},
+    VOLUME = {78},
+      YEAR = {2019},
+    NUMBER = {12},
+     PAGES = {3896--3915},
+      ISSN = {0898-1221},
+   MRCLASS = {65M60},
+  MRNUMBER = {4029105},
+       DOI = {10.1016/j.camwa.2019.06.022},
+       URL = {https://doi.org/10.1016/j.camwa.2019.06.022},
+}
+		
+@article {MR4028481,
+    AUTHOR = {Banerjee, Abhishek},
+     TITLE = {On differential torsion theories and rings with several
+              objects},
+   JOURNAL = {Canad. Math. Bull.},
+  FJOURNAL = {Canadian Mathematical Bulletin. Bulletin Canadien de
+              Math\'{e}matiques},
+    VOLUME = {62},
+      YEAR = {2019},
+    NUMBER = {4},
+     PAGES = {703--714},
+      ISSN = {0008-4395},
+   MRCLASS = {16D90 (18E05 18E40)},
+  MRNUMBER = {4028481},
+       DOI = {10.4153/s0008439518000656},
+       URL = {https://doi.org/10.4153/s0008439518000656},
+}
+		
+@article {MR4022119,
+    AUTHOR = {Banerjee, Abhishek and Kour, Surjeet},
+     TITLE = {{$(A,\delta)$}-modules, {H}ochschild homology and higher
+              derivations},
+   JOURNAL = {Ann. Mat. Pura Appl. (4)},
+  FJOURNAL = {Annali di Matematica Pura ed Applicata. Series IV},
+    VOLUME = {198},
+      YEAR = {2019},
+    NUMBER = {5},
+     PAGES = {1781--1802},
+      ISSN = {0373-3114},
+   MRCLASS = {13N15 (16W25)},
+  MRNUMBER = {4022119},
+       DOI = {10.1007/s10231-019-00844-x},
+       URL = {https://doi.org/10.1007/s10231-019-00844-x},
+}
+		
+@article {MR4021345,
+    AUTHOR = {Aiyappan, S. and Jose, Editha C. and Lomerio, Ivy Carol B. and
+              Nandakumaran, A. K.},
+     TITLE = {Control problem on a rough circular domain and homogenization},
+   JOURNAL = {Asymptot. Anal.},
+  FJOURNAL = {Asymptotic Analysis},
+    VOLUME = {115},
+      YEAR = {2019},
+    NUMBER = {1-2},
+     PAGES = {19--46},
+      ISSN = {0921-7134},
+   MRCLASS = {49J45 (35B27 35Q93 49J20)},
+  MRNUMBER = {4021345},
+}
+		
+@article {MR4018444,
+    AUTHOR = {Mal, Arpita and Paul, Kallol and Rao, T. S. S. R. K. and Sain,
+              Debmalya},
+     TITLE = {Approximate {B}irkhoff-{J}ames orthogonality and smoothness in
+              the space of bounded linear operators},
+   JOURNAL = {Monatsh. Math.},
+  FJOURNAL = {Monatshefte f\"{u}r Mathematik},
+    VOLUME = {190},
+      YEAR = {2019},
+    NUMBER = {3},
+     PAGES = {549--558},
+      ISSN = {0026-9255},
+   MRCLASS = {46B28 (46B20 47L05)},
+  MRNUMBER = {4018444},
+       DOI = {10.1007/s00605-019-01289-3},
+       URL = {https://doi.org/10.1007/s00605-019-01289-3},
+}
+		
+@article {MR4017702,
+    AUTHOR = {Aiyappan, S. and Sardar, Bidhan Chandra},
+     TITLE = {Biharmonic equation in a highly oscillating domain and
+              homogenization of an associated control problem},
+   JOURNAL = {Appl. Anal.},
+  FJOURNAL = {Applicable Analysis. An International Journal},
+    VOLUME = {98},
+      YEAR = {2019},
+    NUMBER = {16},
+     PAGES = {2783--2801},
+      ISSN = {0003-6811},
+   MRCLASS = {49J45 (35B27 35J40 49J20 49K20 80M35 80M40)},
+  MRNUMBER = {4017702},
+       DOI = {10.1080/00036811.2018.1471207},
+       URL = {https://doi.org/10.1080/00036811.2018.1471207},
+}
+		
+@article {MR4014686,
+    AUTHOR = {Sain, Debmalya and Ray, Anubhab and Paul, Kallol},
+     TITLE = {Extreme contractions on finite-dimensional polygonal {B}anach
+              spaces},
+   JOURNAL = {J. Convex Anal.},
+  FJOURNAL = {Journal of Convex Analysis},
+    VOLUME = {26},
+      YEAR = {2019},
+    NUMBER = {3},
+     PAGES = {877--885},
+      ISSN = {0944-6532},
+   MRCLASS = {46B20 (47L05)},
+  MRNUMBER = {4014686},
+}
+		
 @article {MR4008829,
     AUTHOR = {Garani, Shayan Srinivasa and Seshadri, Harish},
      TITLE = {An algorithmic approach to {S}outh {I}ndian classical music},
