correction to MA 399

--- a/_all-courses/ma399.md
+++ b/_all-courses/ma399.md
@@ -1,9 +1,7 @@
 ---
-
-
 code: MA 399
 title: Seminar on Topics in Mathematics
-credits: 2:0
+credits: "2:0"
 prereq-courses: 
 ug-prereq-courses: 
 ---
