bizarre year corrected

--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1505,7 +1505,7 @@ MRREVIEWER = {Hiroki Aoki},
  BOOKTITLE = {Ulam type stability},
      PAGES = {331--344},
  PUBLISHER = {Springer, Cham},
-      YEAR = {[2019] \copyright 2019},
+      YEAR = {2019},
    MRCLASS = {47L05 (39B82 46B20)},
   MRNUMBER = {3971960},
 }
@@ -2029,7 +2029,7 @@ MRREVIEWER = {Hiroki Aoki},
  BOOKTITLE = {Ulam type stability},
      PAGES = {331--344},
  PUBLISHER = {Springer, Cham},
-      YEAR = {[2019] \copyright 2019},
+      YEAR = {2019},
    MRCLASS = {47L05 (39B82 46B20)},
   MRNUMBER = {3971960},
 }
