another malformed year

--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -12352,7 +12352,7 @@ MRREVIEWER = {Ashish K. Upadhyay},
    JOURNAL = {S\'em. Lothar. Combin.},
   FJOURNAL = {S\'eminaire Lotharingien de Combinatoire},
     VOLUME = {58},
-      YEAR = {2007/08},
+      YEAR = {2007},
      PAGES = {Art. B58f, 20},
       ISSN = {1286-4889},
    MRCLASS = {17B67 (33D67)},
