spelling mistake fixed, topics courses topics

--- a/_all-courses/ma336.md
+++ b/_all-courses/ma336.md
@@ -1,23 +1,20 @@
 ---
-
-
 code: MA 336
 title: Topics in Riemannian Geometry
 prereqs:
+books:
+- author: Peter Petersen
+  title: Riemannian geometry
+  publ: Graduate Texts in Mathematics, 171. Springer-Verlag, New York, 1998
+- title: Lectures of Differential Geometry
+  author: Richard Schoen and ST Yau
+  publ: International Press, 1997
+- title: Degenerations of Riemannian metrics under Ricci curvature bounds
+  author: Jeff Cheeger
+  publ: Publications of the Scuola Normale Superiore, Birkhauser, 2001 
+prereq-courses:
   - "MA 333 - Riemannian Geometry"
-  - "MA 332 - Algebraic Topology"
-prereq-courses: 
-ug-prereq-courses: 
+ug-prereq-courses:
 ---
 
-
-
-The first half of the course will focus on convergence
-theory of Riemannian manifolds.
-Gromov-Hausdorff convergence, Lipschitz convergence and collapsing
-theory will be discussed.
-
-The second half will be about the Ricci flow. Existence and
-uniqueness, maximum principles and
-Hamilton's theorem for 3-manifolds with positive Ricci curvature will
-be covered.
+Bochner formula, Laplace comparison, Volume comparison, Heat kernel estimates, Cheng-Yau gradient estimates, Cheeger-Gromoll splitting theorem, Gromov-Haudorff convergence, epsilon regularity, almost rigidity, quantitative structure theory of Riemannian manifolds with Ricci curvature bounds. If time permits, we will discuss the proof of the co-dimension four conjecture due to Cheeger and Naber.
