--- a/_all-courses/ma381.md
+++ b/_all-courses/ma381.md
@@ -1,18 +1,30 @@
 ---
-
-
 code: MA 381
 title: Topics in Several Complex Variables - II
+prereqs:
+  - "Familiarity with the following concepts: differentiable manifolds, tangent and cotangent bundles, and systems of (first order) PDEs."
+  - " Although this is a Topics in Several Complex Variables course, MA 328 (Introduction to SCV) is not a prerequisite. All the necessary concepts from SCV will be rigorously introduced along the way."
+
 books:
-  - author: Krantz, Steven G.
-    title: Geometric analysis and function spaces
-    publ: CBMS Regional Conference Series in Mathematics, 81, American Mathematical Societry
-  - author: Hormander, Lars
-    title: An introduction to complex analysis in several variables (3rd ed.)
-    publ: North-Holland Publishing Co. Amsterdam, 1990
+  - author: A. Boggess
+    title: CR Manifolds and the tangential Cauchy-Riemann complex
+    publ: CRC Press, Boca Raton, FL (1991)
+  - author: M. S. Baouendi, P. Ebenfelt, and L. P. Rothschild
+    title: Real Submanifolds in Complex Space and their Mappings
+    publ: Princeton Math. Series., Princeton Univ. Press (1999)
+
+
 prereq-courses: 
+  - MA 224 (Complex Analysis).
 ug-prereq-courses: 
 ---
 
+The aim of this course is to provide an introduction to CR (Cauchy Riemann/Complex Real) geometry, which is broadly the study of the structure(s) inherited by real submanifolds in complex spaces. We will first give a parallel introduction to the fundamental objects of SCV and CR geometry. These include holomorphic functions in several variables, CR manifolds (embedded and abstract) and CR functions. Next, we will cover some examples, results, and techniques from the following range of topics.
 
-Plurisubharmonic functions, domains of holomorphy, the d-bar problem and potential theory.
+a) embeddability of abstract CR structures;
+
+b) holomorphic extendability of CR functions;
+
+c) CR singularities.
+
+Wherever possible (and time permitting), we will highlight the connections of this field to other areas of analysis and geometry. For instance, abstract CR structures will be discussed in the broader context of involutive structures on smooth manifolds.
