--- a/_all-courses/ma231.md
+++ b/_all-courses/ma231.md
@@ -6,12 +6,12 @@ title: Topology
 code: MA 231
 credits: "3:1"
 books:
-  - author: Armstrong, M. A., Basic Topology, Springer (India), 2004.
-    title: Functional Anaysis (2nd Ed.)
-    publ: McGraw-Hill, 2006
-  - author: Munkres, K. R., Topology,Pearson Education, 2005
-    title: Functional Anaysis (4th Edition)
-    publ: Narosa, 1974
+  - author: Armstrong, M. A. 
+    title: Basic Topology
+    publ: Springer (India), 2004
+  - author: Munkres, K. R. 
+    title: Topology
+    publ: Pearson Education, 2005
   - title: 'Elementary Topology: Problem Textbook'
     author: Viro, O.Ya., Ivanov, O.A., Netsvetaev, N., and Kharlamov, V.M.
     publ: AMS, 2008
