topics in number theory syllabus

--- a/_all-courses/ma354.md
+++ b/_all-courses/ma354.md
@@ -1,4 +1,21 @@
 ---
 code: MA 354
 title: Topics in Number Theory
+prereqs:
+    -  a good background in commutative algebra (inverse limits, $l$-adic completion, Galois theory, possibly some familiarity with Dedekind domains),
+    - some previous knowledge of algebraic number theory should be useful.
+books:
+    - title: Algebraic Number Theory 
+      publ: Papers from the conference held at the University of Sussex, Brighton, September 1–17, 1965 
+      author: J. W. S. Cassels and A. Fröhlich (editors)
+    - author: A. Weil
+      title: Basic Number Theory
+      publ: Classics in Mathematics, Springer 1974
+    - author: B. Conrad
+      title: Weil and Grothendieck approaches to adelic points
+      publ: Enseign. Math. (2) 58 (2012), no. 1-2, 61–97
 ---
+
+The goal is to give an introduction to adeles and some of their uses in modern number theory, discussing also some topics which are not too common in textbooks.
+
+Topics to be covered: absolute values and Ostrowski's Theorem; classification of locally compact fields; definition of adeles and some applications (finiteness of class number and of the generators of the group of S-units; structure of modules over Dedekind domains; applications to the geometry of curves); an introduction to the Strong Approximation Theorem; adelic points of varieties and schemes; possibly other topics (depending on time left and interests of the audience; for example Tate's thesis, quasi-characters of the idele class group and p-adic L-functions).
