--- a/_all-courses/ma354.md
+++ b/_all-courses/ma354.md
@@ -2,7 +2,7 @@
 code: MA 354
 title: Topics in Number Theory
 prereqs:
-    -  a good background in commutative algebra (inverse limits, $l$-adic completion, Galois theory, possibly some familiarity with Dedekind domains),
+    -  a good background in commutative algebra (inverse limits, $I$-adic completion, Galois theory, possibly some familiarity with Dedekind domains),
     - some previous knowledge of algebraic number theory should be useful.
 books:
     - title: Algebraic Number Theory 
