Riemann surface details

--- a/_all-courses/ma307.md
+++ b/_all-courses/ma307.md
@@ -1,4 +1,22 @@
 ---
 code: MA 307
 title: Riemann Surfaces
+prereq-courses:
+    - Topology (MA 231), Complex Analysis (MA 224),  Introduction to Algebraic Topology (MA 232) or equivalent courses.
+
+
+books:
+    - author: H.M. Farkas and I. Kra
+      title: Riemann surfaces
+      publ: Springer GTM 1992
+    - author: R. Miranda
+      title: Algebraic Curves and Riemann Surfaces
+      publ: AMS Graduate Studies in Mathematics,  1995
+    - author: W. Schlag
+      title: A Course in Complex Analysis and Riemann surfaces
+      publ: AMS Graduate Studies in Mathematics,  2014
+
+
 ---
+
+Riemann surfaces are one-dimensional complex manifolds, obtained by gluing together pieces of the complex plane by holomorphic maps.  This course will be an introduction to the theory of Riemann surfaces, with an emphasis on analytical and topological aspects. After describing examples and constructions of Riemann surfaces, the topics covered would include branched coverings and the Riemann-Hurwitz formula, holomorphic 1-forms and periods, the Weyl's Lemma and existence theorems, the Hodge decomposition theorem,  Riemann's bilinear relations, Divisors, the Riemann-Roch theorem, theorems of Abel and Jacobi, the Uniformization theorem, Fuchsian groups and hyperbolic surfaces.
