added missing paper

--- a/_data/publications.bib
+++ b/_data/publications.bib
@@ -1620,6 +1620,23 @@ MRREVIEWER = {Arseniy A. Shcherbakov},
        URL = {https://doi.org/10.1016/j.laa.2018.03.035},
 }
 
+@article {MR3957906,
+    AUTHOR = {Kor\'{a}nyi, Adam and Misra, Gadadhar},
+     TITLE = {Homogeneous {H}ermitian holomorphic vector bundles and the
+              {C}owen-{D}ouglas class over bounded symmetric domains},
+   JOURNAL = {Adv. Math.},
+  FJOURNAL = {Advances in Mathematics},
+    VOLUME = {351},
+      YEAR = {2019},
+     PAGES = {1105--1138},
+      ISSN = {0001-8708},
+   MRCLASS = {47A13 (20C25 32M15 53C07)},
+  MRNUMBER = {3957906},
+MRREVIEWER = {Ze Hua Zhou},
+       DOI = {10.1016/j.aim.2019.05.018},
+       URL = {https://doi.org/10.1016/j.aim.2019.05.018},
+}
+
 @article {MR3957012,
     AUTHOR = {Hazra, Somnath},
      TITLE = {Homogeneous 2-shifts},
